--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "(ATODE)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "$(npm bin)/tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "type-check": "$(npm bin)/tsc --noEmit"
   },
   "repository": {
     "type": "git",
